[package]
name = "geode_reporting"
description = "A contract for reporting suspicious activity on the Geode network."
version = "0.2.0"
authors = ["Dr. Amy Messegee <support@blockandpurpose.com>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
  "ink/std",
]

ink-as-dependency = []
